--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -7,6 +7,8 @@
   <!-- landing section -->
   <div class="container">
 
+    
+
     <h2 class="all-post">ALL POSTS</h2>
     <% article.forEach(data=> { %>
       <div class="custom-card">
@@ -47,6 +49,7 @@
   </div>
   <!-- app js link -->
   <script src="js/app.js"></script>
+  <script src="js/login.js"></script>
   </body>
 
   </html>
